--- a/style.css
+++ b/style.css
@@ -1,1 +1,50 @@
-
+body {
+    background-image: url("https://i.postimg.cc/MGPbCDyV/204-CB983-DB1-B-40-E0-8-D22-360-CA8905-B32.jpg");
+    background-size: no-repeat;
+    background-position: center;
+    background-size: cover;
+    touch-action: none;
+    display: flex;
+    flex-direction: column;
+	-ms-user-select: none; 
+	-moz-user-select: none; 
+	-webkit-user-select: none; 
+	user-select: none
+}
+.tomat {
+border: 0;
+background-image: url("https://i.postimg.cc/MGPbCDyV/204-CB983-DB1-B-40-E0-8-D22-360-CA8905-B32.jpg");
+box-shadow: none;
+}
+h1 {
+margin-top: 50px; /* 100px Старый параметр */
+color: white;
+font-family: Arial;
+font-size: 36px;
+}
+h3 {
+margin-top: 3px; /* 100px Старый параметр */
+color: white;
+font-family: Arial;
+}
+.market {
+background-color:  #444444;
+font-family: Arial;
+color: white;
+border: none;
+}
+#footer {
+position: fixed; /* Фиксированное положение */
+padding: 10px; /* Поля вокруг текста */
+background: #444444; /* Цвет фона */
+color: #fff; /* Цвет текста */
+width: 100%; /* Ширина слоя */
+height: 7%;
+left: 0; bottom: 0; /* Левый нижний угол */
+}
+h4 {
+    font-family: Arial;
+    color: white;
+    font-size: 18px;
+    margin-top: 5px;
+}
