--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
     touch-action: none;
     display: flex;
+    align-items: center;
     flex-direction: column;
 	-ms-user-select: none; 
 	-moz-user-select: none; 
