--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@ body {
     background-size: cover;
     touch-action: none;
     display: flex;
+    max-width: 100vw;
     flex-direction: column;
-	-ms-user-select: none; 
-	-moz-user-select: none; 
-	-webkit-user-select: none; 
-	user-select: none
+    -ms-user-select: none; 
+    -moz-user-select: none;   
+    -webkit-user-select: none; 
+     user-select: none;
+     align-items: center;
 }
 .tomat {
 margin-top: 5px;
