--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
      align-items: center;
 }
 .tomat {
+margin-top: 5px;
 border: 0;
 background-image: url("https://i.postimg.cc/MGPbCDyV/204-CB983-DB1-B-40-E0-8-D22-360-CA8905-B32.jpg");
 box-shadow: none;
